objects/Organizational_Group_Item__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Escalation_Duration__c</fullName>
        <label>Approval Escalation Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Escalation_Price_Requests__c</fullName>
        <label>Approval Escalation - Price Requests</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Escalation</fullName>
                </value>
                <value>
                    <fullName>2 Days</fullName>
                </value>
                <value>
                    <fullName>3 Days</fullName>
                </value>
                <value>
                    <fullName>5 Days</fullName>
                </value>
                <value>
                    <fullName>8 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Escalation_Pricing_Task__c</fullName>
        <description>This field is used to store the approval escalation pricing task value to be displayed on load of Current Prices screen</description>
        <label>Approval Escalation - Pricing Task</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Escalation</fullName>
                </value>
                <value>
                    <fullName>1 Day</fullName>
                </value>
                <value>
                    <fullName>2 Days</fullName>
                </value>
                <value>
                    <fullName>3 Days</fullName>
                </value>
                <value>
                    <fullName>5 Days</fullName>
                </value>
                <value>
                    <fullName>8 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachments_on_Customer_Prices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachments on Customer Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_UoM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Base UoM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business</label>
        <referenceTo>OrgGroup__c</referenceTo>
        <relationshipLabel>Organizational Group Items (Business1)</relationshipLabel>
        <relationshipName>Organizational_Group_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Group_4_Auto_Approval__c</fullName>
        <description>The selected values for Customer group 4 field can be used for Auto- Approval.</description>
        <label>Customer Group 4 Auto-Approval</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CHI-C HIGH</fullName>
                </value>
                <value>
                    <fullName>D06-All Other</fullName>
                </value>
                <value>
                    <fullName>HI-Strategic Customers</fullName>
                </value>
                <value>
                    <fullName>LOW-ABC LOW</fullName>
                </value>
                <value>
                    <fullName>PB-Price Buyer</fullName>
                </value>
                <value>
                    <fullName>UOO-UP-OR-OUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Price_Fixed_Date_Payment_Terms__c</fullName>
        <label>Customer Price Fixed Date Payment Terms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIA</fullName>
                </value>
                <value>
                    <fullName>8ZGF-NET AS AT:</fullName>
                </value>
                <value>
                    <fullName>W020-Due by ______</fullName>
                </value>
                <value>
                    <fullName>Y015-NET15</fullName>
                </value>
                <value>
                    <fullName>Y0145-NET45</fullName>
                </value>
                <value>
                    <fullName>1103-1%10N30</fullName>
                </value>
                <value>
                    <fullName>Y030-Net 30 days from date of Invoice</fullName>
                </value>
                <value>
                    <fullName>Y045-Net 45 days from date of Invoice</fullName>
                </value>
                <value>
                    <fullName>N30</fullName>
                </value>
                <value>
                    <fullName>N45</fullName>
                </value>
                <value>
                    <fullName>8ZGF-Net 45 days</fullName>
                </value>
                <value>
                    <fullName>N030-Net 30 days from End of Month</fullName>
                </value>
                <value>
                    <fullName>8ZGP</fullName>
                </value>
                <value>
                    <fullName>8ZGX</fullName>
                </value>
                <value>
                    <fullName>W060-Net 60 Days End of Month Invoiced</fullName>
                </value>
                <value>
                    <fullName>W090-Net 90 Days End of Month Invoiced</fullName>
                </value>
                <value>
                    <fullName>401M-NET 10 DAYS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Price_Payment_Terms__c</fullName>
        <label>Customer Price Payment Terms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIA</fullName>
                </value>
                <value>
                    <fullName>8ZGF-NET AS AT:</fullName>
                </value>
                <value>
                    <fullName>W020-20 Net EOM Invoiced</fullName>
                </value>
                <value>
                    <fullName>Y015-NET15</fullName>
                </value>
                <value>
                    <fullName>Y0145-NET45</fullName>
                </value>
                <value>
                    <fullName>1103-1%10N30</fullName>
                </value>
                <value>
                    <fullName>Y030-Net 30 days from date of Invoice</fullName>
                </value>
                <value>
                    <fullName>Y045-Net 45 days from date of Invoice</fullName>
                </value>
                <value>
                    <fullName>Y060-Net 60 days from date of Invoice</fullName>
                </value>
                <value>
                    <fullName>Y090-Net 90 days from date of Invoice</fullName>
                </value>
                <value>
                    <fullName>Y120-Net 120 days from date of Invoice</fullName>
                </value>
                <value>
                    <fullName>U000-Payable immediately Due net</fullName>
                </value>
                <value>
                    <fullName>N30</fullName>
                </value>
                <value>
                    <fullName>N45</fullName>
                </value>
                <value>
                    <fullName>8ZGF-Net 45 days</fullName>
                </value>
                <value>
                    <fullName>W020-Due by ______</fullName>
                </value>
                <value>
                    <fullName>Y007-Net 7 from Date of Invoice</fullName>
                </value>
                <value>
                    <fullName>N90</fullName>
                </value>
                <value>
                    <fullName>N60</fullName>
                </value>
                <value>
                    <fullName>N07</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Request_Reasons__c</fullName>
        <label>Customer Request Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CP01-Customer negotiation</fullName>
                </value>
                <value>
                    <fullName>CP02-New customer</fullName>
                </value>
                <value>
                    <fullName>CP03-New materials</fullName>
                </value>
                <value>
                    <fullName>CP04-Competitive pricing</fullName>
                </value>
                <value>
                    <fullName>CP05-Extending current prices</fullName>
                </value>
                <value>
                    <fullName>CP06-Pricing campaign</fullName>
                </value>
                <value>
                    <fullName>CP07-Seasonal price</fullName>
                </value>
                <value>
                    <fullName>CP08-Slow moving inventory</fullName>
                </value>
                <value>
                    <fullName>CP09-Other reason</fullName>
                </value>
                <value>
                    <fullName>CP10-New Application</fullName>
                </value>
                <value>
                    <fullName>CP11-New End Use</fullName>
                </value>
                <value>
                    <fullName>CP12-New Converter</fullName>
                </value>
                <value>
                    <fullName>CP13-New Development Project</fullName>
                </value>
                <value>
                    <fullName>CP14-Price Extension</fullName>
                </value>
                <value>
                    <fullName>CP15-2nd Quality grade</fullName>
                </value>
                <value>
                    <fullName>CP16-Distributor Pricing</fullName>
                </value>
                <value>
                    <fullName>CP17-Change of Incoterm</fullName>
                </value>
                <value>
                    <fullName>CP18-Price increase</fullName>
                </value>
                <value>
                    <fullName>CP19-Gap closer</fullName>
                </value>
                <value>
                    <fullName>CP20-Sales Promotion</fullName>
                </value>
                <value>
                    <fullName>CP21-Key accounts prices</fullName>
                </value>
                <value>
                    <fullName>CP22-HuaMei Pricing</fullName>
                </value>
                <value>
                    <fullName>CP23-Nike OEM Pricing</fullName>
                </value>
                <value>
                    <fullName>CP24-LCL Price</fullName>
                </value>
                <value>
                    <fullName>CP25-Price include airfreight</fullName>
                </value>
                <value>
                    <fullName>CP41-Price include landing and transport</fullName>
                </value>
                <value>
                    <fullName>CP26-Price aligned with PLM guidline</fullName>
                </value>
                <value>
                    <fullName>CP27-Price Decreased</fullName>
                </value>
                <value>
                    <fullName>CP47-Sales Projection 10-30 MT/month</fullName>
                </value>
                <value>
                    <fullName>CP42-Sales Projection 30-60 MT/month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Currency__c</fullName>
        <description>This field is used to store the default currencies to be displayed on load of Current Prices screen</description>
        <label>Default Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Currency</fullName>
                </value>
                <value>
                    <fullName>No Default</fullName>
                </value>
                <value>
                    <fullName>Sales Area Config Currency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Per_UoM_Setup__c</fullName>
        <description>This field is used to store the default Per &amp; UoM setup to be displayed on load of Current Prices screen</description>
        <label>Default Per &amp; UoM Setup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Hierarchy Config</fullName>
                </value>
                <value>
                    <fullName>Sales Area Config</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Per_Value__c</fullName>
        <description>This field is used to store the default per value to be displayed on load of Current Prices screen</description>
        <label>Default Per Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Prices_Selection__c</fullName>
        <description>This field is used to store the default prices to be displayed on load of Current Prices screen</description>
        <label>Default Prices Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Last Valid Prices</fullName>
                </value>
                <value>
                    <fullName>Current Prices</fullName>
                </value>
                <value>
                    <fullName>Expired Prices</fullName>
                </value>
                <value>
                    <fullName>Expiring within 30 days</fullName>
                </value>
                <value>
                    <fullName>Expiring within 60 days</fullName>
                </value>
                <value>
                    <fullName>Expiring within 90 days</fullName>
                </value>
                <value>
                    <fullName>Expiring By</fullName>
                </value>
                <value>
                    <fullName>Valid On</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_SalesArea_Currency__c</fullName>
        <label>Default SalesArea Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_SalesArea_UoM__c</fullName>
        <label>Default SalesArea UoM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_for_Scaled_Prices__c</fullName>
        <label>Default Value for Scaled Prices</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scale</fullName>
                </value>
                <value>
                    <fullName>Non-Scale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Standardized_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Standardized Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_Currency__c</fullName>
        <label>ERP Currency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>KZT</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>PKR</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>RON</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Material_Group2_Code__c</fullName>
        <label>ERP Material Group2 Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SP1 - Standared</fullName>
                </value>
                <value>
                    <fullName>SP2 - Nonstandared</fullName>
                </value>
                <value>
                    <fullName>SP3 - Custom</fullName>
                </value>
                <value>
                    <fullName>SP4 - Transition Out</fullName>
                </value>
                <value>
                    <fullName>SP5 - Make to Order</fullName>
                </value>
                <value>
                    <fullName>SP6 - Make to Stock</fullName>
                </value>
                <value>
                    <fullName>SP7 - Not Portfolio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Pricing_Procedure__c</fullName>
        <label>ERP Pricing Procedure</label>
        <referenceTo>ERP_Pricing_Procedure__c</referenceTo>
        <relationshipLabel>Organizational Group Items</relationshipLabel>
        <relationshipName>BU_Org_Group</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ERP_UoM__c</fullName>
        <description>UoMs defined and to be used to create Price Requests for this BU-Sales Area combination.</description>
        <label>ERP UoM</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>SH</fullName>
                </value>
                <value>
                    <fullName>PF</fullName>
                </value>
                <value>
                    <fullName>BX</fullName>
                </value>
                <value>
                    <fullName>TB</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>MR</fullName>
                </value>
                <value>
                    <fullName>RL</fullName>
                </value>
                <value>
                    <fullName>YD</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
                <value>
                    <fullName>PK</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>SF</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>LB</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>NTN</fullName>
                </value>
                <value>
                    <fullName>/LB</fullName>
                </value>
                <value>
                    <fullName>SU</fullName>
                </value>
                <value>
                    <fullName>LF</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enable_Material_Group_5__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Material Group 5</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Request_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Request Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Variable_Config_Materials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable Config Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Customer_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Customer Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landing_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The check box will indicate whether landing cost is enabled for the sales area or not.</description>
        <label>Landing Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Valid_From_Offset_Non_Cust_Spec__c</fullName>
        <label>Latest Valid From Offset - Non-Cust Spec</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Valid_To_Offset_Cust_Spec__c</fullName>
        <label>Latest Valid To Offset - Cust Spec</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Valid_To_Offset_Non_Cust_Spec__c</fullName>
        <label>Latest Valid To Offset - Non-Cust Spec</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Max_Valid_From_Offset_Cust_Spec__c</fullName>
        <label>Latest Valid From Offset - Cust Spec</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Customer_Permanent_Request_Reasons__c</fullName>
        <label>Non-Customer Permanent Request Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NC01-Extending current prices</fullName>
                </value>
                <value>
                    <fullName>NC02-New materials</fullName>
                </value>
                <value>
                    <fullName>NC03-Periodic price review</fullName>
                </value>
                <value>
                    <fullName>NC04-Other reason</fullName>
                </value>
                <value>
                    <fullName>NC05-Pricing Campaign</fullName>
                </value>
                <value>
                    <fullName>NC06-Seasonal Price</fullName>
                </value>
                <value>
                    <fullName>NC07-Nike OEM Pricing (CFR)</fullName>
                </value>
                <value>
                    <fullName>NC08-Nike OEM Pricing (LCL)</fullName>
                </value>
                <value>
                    <fullName>NC09-Expire Price</fullName>
                </value>
                <value>
                    <fullName>NC10-Increase price</fullName>
                </value>
                <value>
                    <fullName>NC11-Decrease price</fullName>
                </value>
                <value>
                    <fullName>NC12-Correction</fullName>
                </value>
                <value>
                    <fullName>NC13-Second Grade Price</fullName>
                </value>
                <value>
                    <fullName>NC14-Slow moving inventory</fullName>
                </value>
                <value>
                    <fullName>NC15-Competitive pricing</fullName>
                </value>
                <value>
                    <fullName>NC16-Naphtha link price</fullName>
                </value>
                <value>
                    <fullName>NC17-New price reference partner</fullName>
                </value>
                <value>
                    <fullName>NC18-Price reduction</fullName>
                </value>
                <value>
                    <fullName>NC19-Opportunistic sales</fullName>
                </value>
                <value>
                    <fullName>NC20-Pricing increase</fullName>
                </value>
                <value>
                    <fullName>NC21-Exchange rate</fullName>
                </value>
                <value>
                    <fullName>NC22-Customer negotiation</fullName>
                </value>
                <value>
                    <fullName>NC23-New customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Standard_Payment_Terms__c</fullName>
        <label>Non Standard Payment Terms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1103-1% 10 Days, Net 30 Days DOI</fullName>
                </value>
                <value>
                    <fullName>2103-2% 10 Days, Net 30 Days DOI</fullName>
                </value>
                <value>
                    <fullName>2106-2% 10 Days, Net 60 Days DOI</fullName>
                </value>
                <value>
                    <fullName>AY30-50% cash in adv., 50% 30 days DOI</fullName>
                </value>
                <value>
                    <fullName>CIA -Payment in advance</fullName>
                </value>
                <value>
                    <fullName>DDDD-As per agreement</fullName>
                </value>
                <value>
                    <fullName>DF00-CASH ON RECEIPT OF DOCUMENTS</fullName>
                </value>
                <value>
                    <fullName>FC00-Free of Charge - Do Not Pay</fullName>
                </value>
                <value>
                    <fullName>Q1X4-DIRECT DEBIT 10 DAYS, 4% DISCOUNT</fullName>
                </value>
                <value>
                    <fullName>U000-Credit Note</fullName>
                </value>
                <value>
                    <fullName>W015-Net 15 Days EOM</fullName>
                </value>
                <value>
                    <fullName>W025-Net 25 Days EOM</fullName>
                </value>
                <value>
                    <fullName>W035-Net 35 Days EOM</fullName>
                </value>
                <value>
                    <fullName>W045-Net 45 Days EOM</fullName>
                </value>
                <value>
                    <fullName>W060-Net 60 Days EOM</fullName>
                </value>
                <value>
                    <fullName>W090-Net 90 Days EOM</fullName>
                </value>
                <value>
                    <fullName>W120-Net 120 Days EOM</fullName>
                </value>
                <value>
                    <fullName>WB30-Net 30 Days EOM payable the 10th</fullName>
                </value>
                <value>
                    <fullName>WB60-Net 60 Days EOM payable the 10th</fullName>
                </value>
                <value>
                    <fullName>Y010-Net 10 Days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>Y014-Net 14 Days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>Y015-Net 15 Days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>Y020-Net 20 Days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>Y030-Net 30 Days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>Y045-Net 45 Days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>Y049-1% 30 DAYS, NET 45 DAYS</fullName>
                </value>
                <value>
                    <fullName>Y060-Net 60 Days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>Y075-Net 75 Days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>Y090-Net 90 Days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>Y120-Net 120 Days from date of invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrgGroup__c</fullName>
        <label>OrgGroup</label>
        <referenceTo>OrgGroup__c</referenceTo>
        <relationshipLabel>Organizational Group Items</relationshipLabel>
        <relationshipName>Organizational_Group_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
</CustomObject>